@@ -1,3 +1,7 @@
+2014-08-04  Anthony Heading  <anthony@ajrh.net>
+
+	* include/sys/file.h: Add extern "C".
+
 2014-08-04  Corinna Vinschen  <corinna@vinschen.de>
 
 	* common.din (__cxa_atexit): Export.
